--- a/intel/Mandelbrot_12_17_14/Makefile
+++ b/intel/Mandelbrot_12_17_14/Makefile
@@ -4,7 +4,9 @@ COMPILER ?= gcc
 SRCDIR := src
 BUILDDIR := release
 EXTRA_CFLAGS ?=
-LIBFLAGS := -fcilkplus $(EXTRA_LDFLAGS) # -lcilkrts # -vec-report1
+# LIBFLAGS := -fcilkplus $(EXTRA_LDFLAGS) # -lcilkrts # -vec-report1
+CILKFLAG ?= -fcilkplus
+LIBFLAGS := $(CILKFLAG) $(EXTRA_LDFLAGS)
 
 ifdef perf_num
 	EXTRA_CFLAGS += -D PERF_NUM
