--- a/pbbs/convexHull/quickHull/Makefile
+++ b/pbbs/convexHull/quickHull/Makefile
@@ -5,5 +5,9 @@ GLOBAL_REQUIRE = parallel.h sequence.h geometry.h
 LOCAL_REQUIRE = 
 OBJS = hull.o
 
+# Enabling contracted floating-point operations leads to infinite
+# recursion in this code.
+PCFLAGS+=-ffp-contract=off
+
 include ../common/timeRequiredFiles
 include MakeBench
